--- a/templates/register.html
+++ b/templates/register.html
@@ -7,12 +7,20 @@
 <a href="/"><button class="navbar-buttons">Back</button></a>
 {% endblock %}
 {% block content %}
+    <div class="info-graphic-container">
+        <div class="inner-info-graphic">
+            <h2>We're accepting Test-Users!</h2>
+            <p>Test-Users receive 1st year discounted subscription!</p>
+            <p><em>Slots are limited and for a limited time only.</em></p>
+            <h3>How to register as a Test-User</h3>
+        </div>
+    </div>
     <div class="register-container make-card">
         <h3>Create an account.</h3>
         <form method="post">
         <label for="user-email">Provide a valid email:</label><br>
         <input type="text" name="user-email" placeholder="example@learningn.com"><br>
-        <label for="user-pwd">Enter a 8-16 character password:</label><br>
+        <label for="user-pwd">Enter an 8-16 character password:</label><br>
         <input type="password" name="user-pwd" placeholder="Password"><br>
         <input type="submit" value="Register">
         {{ message }}
