--- a/static/css/home.css
+++ b/static/css/home.css
@@ -56,6 +56,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    overflow-y: scroll;
+    margin-bottom: 10px;
+    padding-right: 5px;
     /*border: blue solid 3px;*/
 }
 
@@ -67,19 +70,52 @@
     padding-top: 8px;
     /*border: solid red 2px;*/
 }
-.add-record-input-container input{
+
+#dashboard-selector{
     height: 30px;
-    margin-bottom: 8px;
+    font-size: 14px;
+    font-family: Swansea;
+    color: #6D6D6D;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
+
+#add-record-form input{
+    height: 25px;
+}
+
+.add-record-field{
+    margin-top: 10px;
+}
+
+.currencyinput {
+    border: 1px inset #ccc;
+}
+.currencyinput input {
+    border: 0;
+    height: 25px;
+}
+
+/*.add-record-input-container input{*/
+/*    height: 30px;*/
+/*    margin-bottom: 8px;*/
+/*}*/
 
 .add-record-submit-btn{
     align-self: center;
     width: 100px;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
 .add-record-submit-btn:hover{
     background-color: #599b05;
+}
+
+.small-note{
+    font-size: 10px;
+    margin-left: 5px;
+    font-style: italic;
 }
 
 .project-thumbnail-form{
