--- a/templates/active_dashboard.html
+++ b/templates/active_dashboard.html
@@ -37,11 +37,11 @@
                 <div class="details-container make-card">
                     <div class="total-sales-kpi-container">
                         <span class="kpi-label">Total Sales:</span>
-                        <span class="kpi-number">{{ objects["kpis"][0] }}</span>
+                        <span class="kpi-number">{{ objects["kpis"]["Total Sales"] }}</span>
                     </div>
                     <div class="avg-pp-kpi-container">
                         <span class="kpi-label">Avg % Profit:</span>
-                        <span class="kpi-number">In progress...</span>
+                        <span class="kpi-number">{{ objects["kpis"]["Avg Percent Profit"] }}</span>
 {#                        <button onclick="showPage('anomaly-page', 'deep-dive-btn')" class="deep-dive-sub-btn"><em>More on % profit...</em></button>#}
                     </div>
                 </div>
