--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
 <body>
 <div class="header">
     <div class="logo-container">
-        <span class="logo-text">Auto Analyst <sup>powered by Learning<sup>n</sup></sup></span>
+        <img src="{{ url_for("static", filename="site_images/qauto_logo_white.png") }}" alt="" id="main-logo">
+{#        <span class="logo-text">Qauto Analyst <sup>powered by Learning<sup>n</sup></sup></span>#}
     </div>
     <nav class="navbar">
         {% block navbar %}
