--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,10 +1,20 @@
+.header{
+    height: fit-content;
+    background-color: black;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
 .logo-container{
-    height: 12vh;
+    height: fit-content;
+    background-color: black;
 }
 
 .navbar{
-    height: 3vh;
-    box-shadow: #6D6D6D 0 5px 5px;
+    display: none;
+}
+
+.content{
+    background-color: #467BDE;
 }
 
 .logo-text{
@@ -15,8 +25,9 @@
 }
 
 .logo-container sup{
+    font-style: italic;
     text-shadow: none;
-    font-size: 19px;
+    font-size: 16px;
     font-weight: lighter;
 }
 
@@ -24,20 +35,61 @@
     display: flex;
     flex-direction: column;
     width: 50vw;
-    height: available;
-    padding-left: 20px;
+    height: fit-content;
+    padding-left: 50px;
     align-self: center;
-    align-items: center;
+    margin-bottom: 50px;
+    align-items: flex-start;
+    margin-top: 40px;
+}
+
+.subtitle-text{
+    color: white;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.subtitle-highlight{
+    text-decoration: underline;
+    font-weight: bolder;
+    font-size: 25px;
+    margin-left: 3px;
+    margin-right: 2px;
+    color: black;
+    /*text-shadow: #858585 -1px 1px 3px;*/
+}
+
+.image-bkgnd-graphic{
+    display: flex;
+    width: 650px;
+    background-color: #6C92DE;
+    /*padding-left: 20px;*/
+    /*padding-top: 20px;*/
+    margin-top: 35px;
+    /*padding-top: 20px;*/
+    /*padding-left: 20px;*/
+    /*border-radius: 25px;*/
+}
+
+.info-graphic-img{
+    /*position: relative;*/
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-top: 25px;
+    /*box-shadow: #4B4B4B -2px 2px 5px;*/
 }
 
 .login-container{
     align-self: center;
-    margin: 0 auto 20vh auto;
+    height: fit-content;
     align-content: center;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-direction: column;
     color: #7a7a7a;
     padding: 0 30px 20px 30px;
+    background-color: white;
 }
 
 input{
