--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 <div class="header">
     <div class="logo-container">
         <img src="{{ url_for("static", filename="site_images/qauto_logo_white.png") }}" alt="" id="main-logo">
+        <sup class="title-notation">powered by Learning<sup class="title-notation-n">n</sup></sup>
 {#        <span class="logo-text">Qauto Analyst <sup>powered by Learning<sup>n</sup></sup></span>#}
     </div>
     <nav class="navbar">
