--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
         <div class="graphic-container">
-            <span class="subtitle-text">Your on-demand business analyst for <span class="subtitle-highlight" id="swap-tagline">Savings.</span></span>
+            <span class="subtitle-text">Your on-demand business analyst for <h3 class="subtitle-highlight" id="swap-tagline">Savings.</h3></span>
             <img class="info-graphic-img" src="{{ url_for("static", filename="site_images/active_dashboard_screenshot.png") }}" alt="" width="650px">
         </div>
         <div class="login-container make-card">
