--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,17 +61,14 @@ html, body{
     /*height: auto;*/
 }
 
-.logo-text{
-    font-size: 25px;
+.title-notation{
+    font-size: 12px;
     color: white;
     font-weight: lighter;
+    margin-top: 10px;
+    margin-left: -15px;
+    /*align-self: center;*/
     /*text-shadow: #4B4B4B -1px 0 2px;*/
-}
-
-.logo-container sup{
-    text-shadow: none;
-    font-size: 14px;
-    font-weight: lighter;
 }
 
 .navbar{
